--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 				<ul class="style1">
 					<li class="first">
 						<h3>Gallery</h3>
-						<img src="images/3_sm.jpg" width="500" height="200"*/ alt="" class="image image-full" />
-						<img src="images/4_sm.jpg" width="500" height="200"*/ alt="" class="image image-full" />
-						<img src="images/5_sm.jpg" width="500" height="200"*/ alt="" class="image image-full" />
+						<img src="3_sm.jpg" width="500" height="200"*/ alt="" class="image image-full" />
+						<img src="4_sm.jpg" width="500" height="200"*/ alt="" class="image image-full" />
+						<img src="5_sm.jpg" width="500" height="200"*/ alt="" class="image image-full" />
 						<p><a href="gallery.html"> More..</a></p>
 					</li>
 					<li>
