--- a/GP.html
+++ b/GP.html
@@ -42,26 +42,26 @@
   </tr>
   <tr> 
     <td bgcolor="#FFFFFF" width="50%"> 
-      <div align="center"><img src="images/1_sm.jpg" width="320" height="262"></div>
+      <div align="center"><img src="1_sm.jpg" width="320" height="262"></div>
     </td>
     <td bgcolor="#FFFFFF" width="50%"> 
-      <div align="center"><img src="images/2_sm.jpg" width="320" height="258"></div>
-    </td>
-  </tr>
-  <tr> 
-    <td bgcolor="#FFFFFF" width="50%"> 
-      <div align="center"><img src="images/3_sm.jpg" width="320" height="217"></div>
-    </td>
-    <td bgcolor="#FFFFFF" width="50%"> 
-      <div align="center"><img src="images/4_sm.jpg" width="320" height="216"></div>
+      <div align="center"><img src="2_sm.jpg" width="320" height="258"></div>
     </td>
   </tr>
   <tr> 
     <td bgcolor="#FFFFFF" width="50%"> 
-      <div align="center"><img src="images/5_sm.jpg" width="320" height="257"></div>
+      <div align="center"><img src="3_sm.jpg" width="320" height="217"></div>
     </td>
     <td bgcolor="#FFFFFF" width="50%"> 
-      <div align="center"><img src="images/8_sm.jpg" width="320" height="259"></div>
+      <div align="center"><img src="4_sm.jpg" width="320" height="216"></div>
+    </td>
+  </tr>
+  <tr> 
+    <td bgcolor="#FFFFFF" width="50%"> 
+      <div align="center"><img src="5_sm.jpg" width="320" height="257"></div>
+    </td>
+    <td bgcolor="#FFFFFF" width="50%"> 
+      <div align="center"><img src="8_sm.jpg" width="320" height="259"></div>
     </td>
   </tr>
   <tr> 
